objects/Cohort_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipName>Grad_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Requirement specifically related to a course</description>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Cohort Requirements (Course)</relationshipLabel>
        <relationshipName>Cohort_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Subject Area Credits</label>
        <precision>5</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Area__c</fullName>
        <label>Subject Area</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipName>Grad_Requirements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Cohort Requirement</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Cohort Requirement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cohort Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>